import { AdminListV1Response, AdminThumbnailV1Response, AdminV1Response } from '~/types/api/admin_apiv1_response_pb'

export const get: { [key: string]: AdminV1Response.AsObject | AdminListV1Response.AsObject } = {
  '/v1/admin?limit=20&offset=0': {
    usersList: [
      {
        id: '00000000-0000-0000-00000000',
        username: 'test-user',
        email: 'test@calmato.com',
        phoneNumber: '000-0000-0000',
        role: 0,
        thumbnailUrl: 'https://calmato.com/images/01',
        selfIntroduction: 'よろしくお願いします',
        lastName: 'テスト',
        firstName: 'ユーザ',
        lastNameKana: 'てすと',
        firstNameKana: 'ゆーざ',
        createdAt: '2021-01-01 00:00:00',
        updatedAt: '2021-01-01 00:00:00',
      },
    ],
    limit: 20,
    offset: 0,
    total: 2,
  },
  '/v1/admin?limit=20&offset=0&by=email&direction=asc': {
    usersList: [
      {
        id: '00000000-0000-0000-00000000',
        username: 'test-user',
        email: 'test@calmato.com',
        phoneNumber: '000-0000-0000',
        role: 0,
        thumbnailUrl: 'https://calmato.com/images/01',
        selfIntroduction: 'よろしくお願いします',
        lastName: 'テスト',
        firstName: 'ユーザ',
        lastNameKana: 'てすと',
        firstNameKana: 'ゆーざ',
        createdAt: '2021-01-01 00:00:00',
        updatedAt: '2021-01-01 00:00:00',
      },
    ],
    limit: 20,
    offset: 0,
    total: 1,
  },
  '/v1/admin/00000000-0000-0000-00000000': {
    id: '00000000-0000-0000-00000000',
    username: 'test-user',
    email: 'test@calmato.com',
    phoneNumber: '000-0000-0000',
    role: 0,
    thumbnailUrl: 'https://calmato.com/images/01',
    selfIntroduction: 'よろしくお願いします',
    lastName: 'テスト',
    firstName: 'ユーザ',
    lastNameKana: 'てすと',
    firstNameKana: 'ゆーざ',
    createdAt: '2021-01-01 00:00:00',
    updatedAt: '2021-01-01 00:00:00',
  },
}

export const post: { [key: string]: AdminV1Response.AsObject | AdminThumbnailV1Response.AsObject } = {
  '/v1/admin': {
    id: '00000000-0000-0000-00000000',
    username: 'test-user',
    email: 'test@calmato.com',
    phoneNumber: '000-0000-0000',
    role: 0,
    thumbnailUrl: 'https://calmato.com/images/01',
    selfIntroduction: 'よろしくお願いします',
    lastName: 'テスト',
    firstName: 'ユーザ',
    lastNameKana: 'てすと',
    firstNameKana: 'ゆーざ',
    createdAt: '2021-01-01 00:00:00',
    updatedAt: '2021-01-01 00:00:00',
  },
  '/v1/admin/00000000-0000-0000-00000000/thumbnail': {
    thumbnailUrl: 'https://calmato.com/images/01',
  },
}

export const patch: { [key: string]: AdminV1Response.AsObject } = {
  '/v1/admin/00000000-0000-0000-00000000': {
    id: '00000000-0000-0000-00000000',
    username: 'test-user',
    email: 'test@calmato.com',
    phoneNumber: '000-0000-0000',
    role: 0,
    thumbnailUrl: 'https://calmato.com/images/01',
    selfIntroduction: 'よろしくお願いします',
    lastName: 'テスト',
    firstName: 'ユーザ',
    lastNameKana: 'てすと',
    firstNameKana: 'ゆーざ',
    createdAt: '2021-01-01 00:00:00',
    updatedAt: '2021-01-01 00:00:00',
  },
  '/v1/admin/00000000-0000-0000-00000000/profile': {
    id: '00000000-0000-0000-00000000',
    username: 'test-user',
    email: 'test@calmato.com',
    phoneNumber: '000-0000-0000',
    role: 0,
    thumbnailUrl: 'https://calmato.com/images/01',
    selfIntroduction: 'よろしくお願いします',
    lastName: 'テスト',
    firstName: 'ユーザ',
    lastNameKana: 'てすと',
    firstNameKana: 'ゆーざ',
    createdAt: '2021-01-01 00:00:00',
    updatedAt: '2021-01-01 00:00:00',
  },
  '/v1/admin/00000000-0000-0000-00000000/contact': {
    id: '00000000-0000-0000-00000000',
    username: 'test-user',
    email: 'test@calmato.com',
    phoneNumber: '000-0000-0000',
    role: 0,
    thumbnailUrl: 'https://calmato.com/images/01',
    selfIntroduction: 'よろしくお願いします',
    lastName: 'テスト',
    firstName: 'ユーザ',
    lastNameKana: 'てすと',
    firstNameKana: 'ゆーざ',
    createdAt: '2021-01-01 00:00:00',
    updatedAt: '2021-01-01 00:00:00',
  },
  '/v1/admin/00000000-0000-0000-00000000/password': {
    id: '00000000-0000-0000-00000000',
    username: 'test-user',
    email: 'test@calmato.com',
    phoneNumber: '000-0000-0000',
    role: 0,
    thumbnailUrl: 'https://calmato.com/images/01',
    selfIntroduction: 'よろしくお願いします',
    lastName: 'テスト',
    firstName: 'ユーザ',
    lastNameKana: 'てすと',
    firstNameKana: 'ゆーざ',
    createdAt: '2021-01-01 00:00:00',
    updatedAt: '2021-01-01 00:00:00',
  },
}

export const destroy: { [key: string]: {} } = {
  '/v1/admin/00000000-0000-0000-00000000': {},
}
